test/tests/PostconditionAtReturnInVoidMethod.frost
class PostconditionAtReturnInVoidMethod {
    @post(@return > 0)
    method test(x:Int) {
        Console.printLine(x)
    }
}
